[package]
name = "dione-lib"
version = "0.1.0"
edition = "2018"
authors = ["Noah Dörr", "Hannes Furmans"]
license = "Apache-2.0"
description = "Library for Dione providing essential cryptographic utilities"
readme = "README.md"
homepage = "http://dione.network"
repository = "https://github.com/Dione-Software/dione"
keywords = ["libp2p", "messaging", "no_std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adler = "1.0.2"
seahash = "4.1.0"
lz4_flex = "0.8.2"
ring-compat = { version = "0.3.1", features = ["digest"], default-features = false }
digest = "0.9"
zeroize = "1.4.0"
rand = "0.8.4"
rand_core = "0.6.3"
sss-rs = "0.8.0"
aes-gcm = "0.9.2"
aes-gcm-siv = "0.10.1"
x3dh-ke = "0.1.4"
p256 = {version = "0.9.0", features = ["ecdsa", "jwk"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_bytes = "0.11.5"
bincode = "1.3.3"
hmac = "0.11.0"
hkdf = "0.11.0"
hashbrown = {version = "0.11.2", features = ["serde"]}
double-ratchet-2 = "0.3.4"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "hashing_benchmark"
harness = false

[[bench]]
name = "sharing"
harness = false

[[bench]]
name = "aead_bench"
harness = false
