[package]
name = "dione-net-lib"
version = "0.1.0"
edition = "2018"
authors = ["Noah Dörr", "Hannes Furmans"]
license = "Apache-2.0"
description = "Library with networking stack for the Dione Network"
readme = "README.md"
homepage = "http://dione.network"
repository = "https://github.com/Dione-Software/dione"
keywords = ["libp2p", "messaging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5.2"
prost = "0.8"
tokio = {version = "1.10.0", features = ["rt-multi-thread", "rt"]}
anyhow = "1.0.43"
thiserror = "1.0.26"
dione-lib = { path = "../dione-lib"}
serde = {version = "1.0.128", features = ["serde_derive"]}
serde_bytes = "0.11.5"
bincode = "1.3.3"
uuid = {version = "0.8.2", features = ["v4", "serde"]}
sled = "0.34.6"
rand = "0.8.4"

[build-dependencies]
tonic-build = "0.5.2"