[package]
name = "dione-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.2.18"
dione-lib = { path = "../dione-lib" }
adler = { version = "1.0.2", default-features = false }
serde_derive = "1"
serde = { version = "1", features = ["serde_derive"] }
toml = "0.5"
libp2p = { version = "0.39.1", features = ["tcp-async-io", "kad", "dns-async-std", "websocket", "noise", "mplex", "yamux"], default-features = false }
tokio-stream = "0.1.7"
void = "1.0.2"
structopt = "0.3.22"
bincode = "1.3.3"
sled = "0.34.6"
anyhow = "1.0.43"
async-trait = "0.1.51"

[build-dependencies]
tonic-build = "0.5.1"

[dev-dependencies]
dione-test-client = { path = "../dione-test-client" }
