[package]
name = "dione-server"
version = "0.1.0"
edition = "2018"
authors = ["Noah Dörr", "Hannes Furmans"]
license = "Apache-2.0"
description = "Server implementation of Dione"
readme = "README.md"
homepage = "https://dione.network"
repository = "https://github.com/Dione-Software/dione"
keywords = ["libp2p", "messaging"]

[dependencies]
tonic = {version = "0.5", features = ["tls"]}
prost = "0.8"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3.1"
dione-lib = { path = "../dione-lib" }
adler = { version = "1.0.2", default-features = false }
serde_derive = "1"
serde = { version = "1", features = ["serde_derive"] }
toml = "0.5"
libp2p = { version = "0.40.0", features = ["tcp-async-io", "kad", "dns-async-std", "websocket", "noise", "mplex", "yamux"], default-features = false }
tokio-stream = "0.1.7"
void = "1.0.2"
structopt = "0.3.22"
bincode = "1.3.3"
sled = "0.34.6"
anyhow = "1.0.43"
async-trait = "0.1.51"
tera = "1.12.1"
actix-web = {version = "3", features = ["rustls"]}
actix-rt = "2.2.0"
rustls = "0.18"


[build-dependencies]
tonic-build = "0.8.0"

[dev-dependencies]
dione-test-client = { path = "../dione-test-client" }
