[package]
name = "dione-test-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "dione_test_client_lib"

[[bin]]
path = "src/main.rs"
name = "dione-test-client"

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"] }
dione-lib = { path = "../dione-lib" }

[build-dependencies]
tonic-build = "0.5.1"
