[package]
name = "dione-test-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dione-net-lib = { path = "../dione-net-lib" }
dialoguer = "0.8.0"
structopt = "0.3.22"
anyhow = "1.0.43"
uuid = { version = "0.8", features = ["v4"] }